Fixed some alignment issues on Score Card component

--- a/src/Components/StatsCard/style.scss
+++ b/src/Components/StatsCard/style.scss
@@ -4,7 +4,7 @@
   width: 100%;
   color: white;
   box-sizing: border-box;
-  padding: 15px 20px;
+  padding: 1.3% 0px;
   display: flex;
   justify-content: space-evenly;
 }
